html setup and service data loaded

--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <title>Dynamic Form</title>
 </head>
 <body>
-
+<form>
+    <div>
+        <label for="id">Id:</label>
+        <select id="id" name="id">
+            <option value="" disabled selected>Select an id</option>
+        </select>
+    </div>
+    <div id="titleSection">
+        <label for="title">title:</label>
+        <select id="title" name="title"></select>
+    </div>
+    <div id="bodySection">
+        <label for="id">body:</label>
+        <textarea name="body" id="body"></textarea>
+    </div>
+</form>
 </body>
 <script src="js/jquery.min.js"></script>
 </html>
